--- a/main.html
+++ b/main.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Favourite Animal</title>
 </head>
-
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+<body style="text-align: center; margin-top: 50px; font-family: Arial, sans-serif;">
+  <h2>My Favourite Animal</h2>
+  <img 
+    src="https://cdn.pixabay.com/photo/2017/02/20/18/03/dog-2083492_1280.jpg" 
+    alt="A cute golden retriever dog sitting on grass"
+    width="400"
+  >
+  <p>This is my favourite animal, a dog. Loyal, friendly, and full of love.</p>
 </body>
-
 </html>
